# Deucalion

./: .gitignore  README.md  nohup.out  pyproject.toml
assets/experiments/: run_webgpt_ref_ref.py
dpo_adl/: cli.py
dpo_adl/analysis/: subnetwork.py
dpo_adl/backends/: hf_hooks.py
dpo_adl/data/: fineweb.py  prompts_ds.py
dpo_adl/diff/: delta_builder.py  orth.py
dpo_adl/dpo/: implicit_reward.py
dpo_adl/eval/: embeds.py  plots.py  report.py  steering.py
dpo_adl/patchscope/: token_identity.py
dpo_adl/train/: datasets.py  datasets_hub.py  dpo_trainer.py  eval.py  gradnorm.py  grpo_british_prompts.py  grpo_rewards.py  thinking.py
dpo_adl/utils/: exp.py  logging.py
experiments/: exp01_prompts.txt  exp01_qwen0p5b.txt  exp02_qwen0p5b.txt  exp03_qwen0p5b.txt
prompts/: generic20.txt  generic60.txt  implicit_british20.txt  implicit_british20_neutral.txt  implicit_british20_neutral_v2.txt  implicit_british5_neutral.txt
scripts/: auto_webgpt_pipeline.sh  auto_webgpt_pipeline_no_refref.sh  eval_grpo_british.py  run_full_pipeline.sh  watch_ufb_tokens.sh
