[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dpo-adl"
version = "0.1.0"
description = "DPO-ADL: Activation-Difference Lens for DPO vs Reference Models"
authors = [{name = "DPO-ADL Maintainers"}]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "transformers>=4.41",
  "accelerate>=0.30",
  "datasets>=2.19",
  "einops",
  "tyro>=0.8.5",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "sentence-transformers>=2.6",
  "reportlab>=4.2",
  "trl>=0.9.6",
  "peft>=0.12.0",
]

[project.scripts]
dpo-adl = "dpo_adl.cli:main"

[tool.setuptools]
packages = ["dpo_adl"]
