[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anubis"
version = "0.1.0"
description = "Anubis: Activation-Difference Lens and Steering for Instruction- and Preference-Tuned LMs"
authors = [{name = "Anubis Maintainers"}]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "transformers>=4.41",
  "accelerate>=0.30",
  "datasets>=2.19",
  "einops",
  "tyro>=0.8.5",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "reportlab>=4.2",
  "trl>=0.9.6",
  "peft>=0.12.0",
]

[project.scripts]
# New entrypoint (preferred)
anubis = "dpo_adl.cli:main"
# Backward-compatible alias
dpo-adl = "dpo_adl.cli:main"

[tool.setuptools]
packages = ["dpo_adl"]
